Prevent menu button from being cut off by border-radius

--- a/src/modules/TopBar/TopBar.module.css
+++ b/src/modules/TopBar/TopBar.module.css
@@ -50,6 +50,7 @@
 	box-shadow: inset 0 0 0 2px transparent !important;
 	padding-inline-end: 0;
 	color: var(--font-color);
+	border-radius: 0;
 
 	/* Font scaling:
 		Minimum: Sane value picked from Figma design
